# oqd-heisenberg-ion

./: .gitignore  404.html  LICENSE  Neater_Hamiltonian_diag.ipynb  README.md  eigenvalues_magnetization_8_Heisenberg.csv  eigenvalues_magnetization_8_delta_-1_XXZ.csv  eigenvalues_magnetization_8_delta_-2_XXZ.csv  eigenvalues_magnetization_8_delta_11_XXZ.csv  eigenvalues_magnetization_8_delta_15_XXZ.csv  eigenvalues_magnetization_8_delta_16_XXZ.csv  eigenvalues_magnetization_8_delta_2_XXZ.csv  eigenvalues_magnetization_8_delta_3_XXZ.csv  eigenvalues_magnetization_8_delta_4_XXZ.csv  eigenvalues_magnetization_8_delta_7_XXZ.csv  eigenvalues_magnetization_8_delta_8_XXZ.csv  eigenvalues_magnetization_8_delta_9_XXZ.csv  eigenvectors_8_Heisenberg.csv  eigenvectors_8__delta_-2_XXZ.csv  eigenvectors_8__delta_12_XXZ.csv  eigenvectors_8__delta_13_XXZ.csv  eigenvectors_8__delta_15_XXZ.csv  eigenvectors_8__delta_16_XXZ.csv  eigenvectors_8__delta_2_XXZ.csv  eigenvectors_8__delta_5_XXZ.csv  eigenvectors_8__delta_8_XXZ.csv  exact_diagonalization.jl  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.ipynb_checkpoints/: Neater_Hamiltonian_diag-checkpoint.ipynb
SSE_v1/: SSE_initializer.py  SSE_simulator.py  exact_diagonalization.py  test_energy_estimates.py
SSE_v2/: CMakeLists.txt  ConfigurationGenerator.cpp  ConfigurationGenerator.h  Estimators.cpp  Estimators.h  Geometry.cpp  Geometry.h  ProbabilityTables.cpp  ProbabilityTables.h  QMC_alpha_T.py  SSE_initializer.py  SimulationParameters.cpp  SimulationParameters.h  VertexTypes.cpp  VertexTypes.h  compare_ed_SSE.py  exact_diagonalization_N3.py  generate_LSW_QMC_results.py  generate_QMC_alpha_figure.py  generate_ed_results_figure.py  generate_renormalized_QMC_LSW_figure.py  main.cpp  mft_ed_qmc.py  plot_SSE_results.py  spin_wave_analysis.py  statistical_analysis.py  test_edge_case.py  test_free_fermion_solution.py
XXZ with delta/: eigenvalues_magnetization_8_delta_10_XXZ.csv  eigenvalues_magnetization_8_delta_12_XXZ.csv  eigenvalues_magnetization_8_delta_13_XXZ.csv  eigenvalues_magnetization_8_delta_14_XXZ.csv  eigenvalues_magnetization_8_delta_5_XXZ.csv  eigenvalues_magnetization_8_delta_6_XXZ.csv  eigenvectors_8__delta_-1_XXZ.csv  eigenvectors_8__delta_10_XXZ.csv  eigenvectors_8__delta_11_XXZ.csv  eigenvectors_8__delta_14_XXZ.csv  eigenvectors_8__delta_3_XXZ.csv  eigenvectors_8__delta_4_XXZ.csv  eigenvectors_8__delta_6_XXZ.csv  eigenvectors_8__delta_7_XXZ.csv  eigenvectors_8__delta_9_XXZ.csv
XY/: eigenvalues_magnetization_8_XY.csv  eigenvectors_8_XY.csv
algorithms/ed/: index.html
algorithms/refs/: index.html
algorithms/sse/: index.html
api/drivers/: index.html
api/interface/: index.html
configs/: SSE_inputs.txt  init_sse_configs.txt  wrapper_inputs.txt
deterministic_NN_SSE/: deterministic_NN_SSE_initializer.py  deterministic_NN_SSE_simulator.py  test_XY_energy_estimates.py  test_isotropic_energy_estimates.py
docs/: feat_dev.md  index.md
examples/: long_range_XY.ipynb
feat_dev/: index.html
postprocessing/: generate_QMC_alpha_figure.py  generate_QMC_validation_figure.py
preprocessing/: SSE_initializer.py  coupling_strengths.py  geometry.py  input_file_reader.py  input_parser.py  input_utils.py  wrapper_inputs.txt
scripts/: KL_divergence_calculator.py  compare_ed_SSE.py  generate_LSW_QMC_results.py  generate_MFT_QMC_results.py  generate_QMC_alpha_figure.py  generate_QMC_validation_figure.py  generate_ed_data.py  generate_ed_results_figure.py  generate_kac_normalized_QMC_LSW_figure.py  generate_qmc_data.py  generate_renormalized_QMC_LSW_figure.py  plot_structure_factor.py  temperature_convergence.py
search/: search_index.json
src/heisenberg_ion/simulators/qmc/long_range/engine/: CMakeLists.txt  ConfigurationGenerator.cpp  ConfigurationGenerator.h  Estimators.cpp  Estimators.h  ProbabilityTables.cpp  ProbabilityTables.h  SimulationParameters.cpp  SimulationParameters.h  VertexTypes.h  main.cpp
tests/: test_XY_energy_estimates.py  test_isotropic_energy_estimates.py  test_qmc_ed_exp_J_ij.py
(+227 files in other folders)
