[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heisenberg-ion"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = ["quantum", "computing", "qmc", "ed", "atomic"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Science/Research ",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["heisenberg_ion*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = ["ruff>=0.9.6"]

[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/Heisenberg_Ion"
Repository = "https://github.com/OpenQuantumDesign/Heisenberg_Ion"