[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oqd-heisenberg-ion"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache 2.0" }
keywords = ["quantum", "computing", "qmc", "ed", "atomic"]
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Science/Research ",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
docs = [

    "pymdown-extensions",

    "mkdocstrings",

    "mkdocs-material",

    "mkdocstrings-python",

    "mdx_truly_sane_lists",

]
tests = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["oqd_heisenberg_ion*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = ["jupyter>=1.1.1", "ruff>=0.9.6"]

[project.scripts]
oqd-heisenberg-ion = "oqd_heisenberg_ion.interface.main:main"

[project.urls]
Homepage = "https://github.com/OpenQuantumDesign/Heisenberg_Ion"
Repository = "https://github.com/OpenQuantumDesign/Heisenberg_Ion"